# SMA

./: .gitignore  CMakeLists.txt  README.md  main.cpp  plot.py  test.cpp
